--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,7 @@
 services:
-  # Zookeeper
-  - name: zookeeper
+  # Zookeeper: private Kafka dependency
+  - type: private_service
+    name: zookeeper
     runtime: docker
     dockerfilePath: ./Dockerfile.zookeeper
     envVars:
@@ -9,8 +10,9 @@ services:
       - key: ZOOKEEPER_TICK_TIME
         value: "2000"
 
-  # Kafka
-  - name: kafka
+  # Kafka: private messaging service
+  - type: private_service
+    name: kafka
     runtime: docker
     dockerfilePath: ./Dockerfile.kafka
     envVars:
@@ -29,28 +31,34 @@ services:
       - key: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
         value: "1"
 
-  # Producer
-  - name: producer
+  # Producer: background worker fetching news
+  - type: worker
+    name: producer
     runtime: docker
     dockerfilePath: ./Dockerfile
+    startCommand: python news_producer.py
     envVars:
       - key: NEWSAPI_KEY
         fromSecret: news_api_key
       - key: KAFKA_URL
         value: kafka:9092
 
-  # Spark
-  - name: spark
+  # Spark: background worker for inference
+  - type: worker
+    name: spark
     runtime: docker
     dockerfilePath: ./Dockerfile
+    startCommand: "spark-submit --master local[*] stream_infer.py"
     envVars:
       - key: KAFKA_URL
         value: kafka:9092
 
-  # Dashboard
-  - name: dashboard
+  # Dashboard: public-facing web service
+  - type: web
+    name: dashboard
     runtime: docker
     dockerfilePath: ./Dockerfile
+    startCommand: streamlit run dashboard.py --server.port=8080 --server.address=0.0.0.0
     envVars:
       - key: KAFKA_URL
         value: kafka:9092
